--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -835,6 +836,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
@@ -845,6 +847,7 @@
   <h3>GitHub Actions</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -1582,6 +1585,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -1589,6 +1593,7 @@
   <h3>Cloudflare Workers</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -2326,6 +2331,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -2333,6 +2339,7 @@
   <h3>Notion</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -3070,6 +3077,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3442,6 +3450,7 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
   </div>
 </div>
 
@@ -3449,6 +3458,7 @@
   <h3>x</h3>
   <div class="se_div">
     <div class="se_a se_operational"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
